fix nav links wrapping when hovered

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -216,10 +216,12 @@ dd {
   margin: 0 0 0 40px; }
 
 nav ul, nav ol {
-  list-style: none;
-  list-style-image: none;
-  margin: 0;
-  padding: 0; }
+    list-style: none;
+    list-style-image: none;
+    margin: 0;
+    padding: 0;
+    white-space: nowrap;
+}
 
 img {
   border: 0;
